[gd_scene load_steps=18 format=2]

[ext_resource path="res://plane_pack/planes/torpedo/torpedo.png" type="Texture" id=1]
[ext_resource path="res://EnemyBullet.gd" type="Script" id=2]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_03.png" type="Texture" id=3]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_09.png" type="Texture" id=4]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_06.png" type="Texture" id=5]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_04.png" type="Texture" id=6]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_05.png" type="Texture" id=7]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_02.png" type="Texture" id=8]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_08.png" type="Texture" id=9]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_01.png" type="Texture" id=10]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_07.png" type="Texture" id=11]
[ext_resource path="res://sounds/Bottle Rocket-SoundBible.com-332895117.mp3" type="AudioStream" id=12]
[ext_resource path="res://sounds/Depth Charge Short-SoundBible.com-1303947570.wav" type="AudioStream" id=13]
[ext_resource path="res://plane_pack/planes/torpedo/torpedo_black.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "black",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "missile",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.5911, 8.51408 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ null, ExtResource( 10 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="EnemyBullet" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
rotation = 3.14159
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 3 )
animation = "missile"
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0560074, -0.62493 )
shape = SubResource( 1 )

[node name="Explosion" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 2 )

[node name="Rocket" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[connection signal="area_entered" from="." to="." method="_on_EnemyBullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_EnemyBullet_body_entered"]
